tests/spec/emit/snapshots/variable_shadow_inside_match_arm.snap
---
source: tests/spec/emit/patterns.rs
description: "input: \nfn test(opt: Option<int>) -> int {\n  match opt {\n    Some(x) => {\n      let x = x * 2\n      x\n    },\n    None => 0,\n  }\n}\n"
---
package main

import lisette "github.com/ivov/lisette/prelude"

func test(opt lisette.Option[int]) int {
	if opt.Tag == lisette.OptionSome {
		x := opt.SomeVal * 2
		return x
	}
	return 0
}
