tests/spec/emit/snapshots/variadic_arguments_wrap_in_interface_adapter.snap
---
source: tests/spec/emit/types.rs
description: |
  
  struct Thing { n: int }
  
  interface Box<T> {
    fn get() -> T
  }
  
  struct Bar {}
  
  impl Bar {
    fn get(self) -> Option<Ref<Thing>> {
      None
    }
  }
  
  fn use_box(b: Box<Option<Ref<Thing>>>) {
    let _ = b
  }
  
  fn use_boxes(bs: VarArgs<Box<Option<Ref<Thing>>>>) {
    let _ = bs
  }
  
  fn main() {
    use_box(Bar {})
    use_boxes(Bar {}, Bar {})
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

type Thing struct {
	n int
}

type Box[T any] interface {
	get() T
}

type Bar struct{}

func (b Bar) get() *Thing {
	return nil
}

func useBox(b Box[lisette.Option[*Thing]]) {
	_ = b
}

func useBoxes(bs ...Box[lisette.Option[*Thing]]) {
	_ = bs
}

func main() {
	useBox(_lisAdapter_Bar_Box_0{inner: Bar{}})
	useBoxes(_lisAdapter_Bar_Box_0{inner: Bar{}}, _lisAdapter_Bar_Box_0{inner: Bar{}})
}

type _lisAdapter_Bar_Box_0 struct {
	inner Bar
}

func (a _lisAdapter_Bar_Box_0) get() lisette.Option[*Thing] {
	raw := a.inner.get()
	return lisette.OptionFromNilable[*Thing](raw, raw == nil)
}
