tests/spec/emit/snapshots/versioned_go_module_uses_package_directive_as_alias.snap
---
source: tests/spec/emit/imports.rs
description: |
  
  import "go:example.com/bubbletea/v2"
  
  fn make() -> Ref<tea.Program> {
    &tea.Program{}
  }
---
package main

import tea "example.com/bubbletea/v2"

func make_() *tea.Program {
	return &tea.Program{}
}
