tests/spec/emit/snapshots/void_fn_in_tuple_return_type.snap
---
source: tests/spec/emit/types.rs
description: |
  
  fn make_pair() -> (fn() -> int, fn()) {
    let get = || -> int { 42 };
    let inc = || { };
    (get, inc)
  }
---
package main

func makePair() (func() int, func()) {
	get := func() int {
		return 42
	}
	inc := func() {
	}
	return get, inc
}
