tests/spec/emit/snapshots/while_binary_condition_with_capture_inside_loop.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  fn bump(i: mut Ref<int>) -> int {
    i.* = i.* + 1
    i.*
  }
  fn test() {
    let mut i = 0
    while i < 3 && bump(&i) > 0 {
      let _ = i
    }
  }
---
package main

func bump(i *int) int {
	*i++
	return *i
}

func test() {
	i := 0
	for i < 3 && bump(&i) > 0 {
		_ = i
	}
}
