tests/spec/emit/snapshots/while_break_value_nested_in_expr_loop.snap
---
source: tests/spec/emit/control_flow.rs
description: "input: \nfn test() -> int {\n  let x = loop {\n    while true { break }\n    break 0\n  };\n  x\n}\n"
---
package main

func test() int {
	var x int
	for {
		for {
			break
		}
		x = 0
		break
	}
	return x
}
