tests/spec/emit/snapshots/while_condition_with_setup_statements_inside_loop.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  fn bump(i: mut Ref<int>) -> int {
    i.* = i.* + 1
    i.*
  }
  fn test() {
    let mut i = 0
    while (i < 3, bump(&i)).0 {
      let _ = i
    }
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func bump(i *int) int {
	*i++
	return *i
}

func test() {
	i := 0
	for {
		v := i < 3
		if !lisette.MakeTuple2[bool, int](v, bump(&i)).First {
			break
		}
		_ = i
	}
}
