tests/spec/emit/snapshots/while_let_basic.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  fn test(opt: Option<int>) {
    let mut current = opt;
    while let Some(x) = current {
      current = None;
      let _ = x;
    }
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func test(opt lisette.Option[int]) {
	current := opt
	for {
		if current.Tag == lisette.OptionSome {
			current = lisette.MakeOptionNone[int]()
		} else {
			break
		}
	}
}
